--- a/emaill-sender/email-frontend/index.html
+++ b/emaill-sender/email-frontend/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Simple Email Service - Send Emails Effortlessly</title>
+    <meta name="description" content="A clean, intuitive email service for sending emails with attachments. Fast, simple, and reliable." />
+    <meta name="author" content="Simple Email Service" />
+
+    <meta property="og:title" content="Simple Email Service - Send Emails Effortlessly" />
+    <meta property="og:description" content="A clean, intuitive email service for sending emails with attachments. Fast, simple, and reliable." />
+    <meta property="og:type" content="website" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
